lab1/Test/L1-A-13-91.output
Error Type A at Line 3
Error Type B at Line 6
Error Type A at Line 13
Error Type B at Line 29
Error Type B at Line 33
Error Type B at Line 35
Error Type A at Line 35
