lab1/Test/L1-A-13-91.cmm
struct n1dhSAXSecHYH {
  struct Wn5ZSI wb6lZAukwOaUJ ;
  struct wiMPONc8a #Phj ;
  struct {
  }Mz8UwMvu50__Uf , v16L0_eq = GcUiqxJPdwN5k2fvR || 
    _d9CtHuoGC && qr9qg178Ie10WBCoy [ O2mQtpphZNxB = = 
    EuX5U4 == u_yyjeWOO3lXz + PytaDUMn2Z ( Mf5f || MT9WZLyqo_Vb5 
    && QKf23PJEscC >= XB3uIOMNCtLGSVL - ( DF9LSiU <= w4pOID 
    + - UBMU1NIEYbYaWVBwrRt ( GnV9DNIq9fCrxAR4jwpR , F9b 
    != ( OO > AXKPfU9lvpi9qFm ) ) + ! hmv0vPQlY0i5 ) < 
    697030800.767255770 - 646739288 ) / R ] * ! - GJ0hH7QjN8e 
    ( ) . nejAkNN3k_Z ;
`}X5aXr , X1OzPDtCW6 

;
int vo_jJS5j ( ) {
  float tca7CBoow4ZY0ehlex [ 988510880 ] ;
}
struct NBDRXzCrZ5SKC6qwvcp b5aPII9ySk 
;
int ;
int yqVsnq0 ( int oc , int XP6V ) {
  DQDKeSX ;
  DMPyG59z3lKiAH2 ;
  if ( noMLodnFPx )   rBW4cTSr ;
else   if ( BtVoX2dGlWFO )   return J9vhMTVi2As ;


}<= 
int ;
int m7l36uX ( int ASLHORkRdSXV9 ) {
  if ( X )   while ( QgqdS_n_JK68 )   {
  }float 

else !=   MIA7LBkyDuZVAxCe \;

}
int ;
int ;
